# Altiq-hr-AI

./: README.md  emails.py  main.py  pyproject.toml  sample.env  server.py  utils.py
HRMS/: __init__.py  business_trip_manager.py  employee_manager.py  leave_manager.py  meeting_manager.py  schemas.py  ticket_manager.py
